# latent-vae-synth

./: .gitignore  CLAUDE.md  README.md  requirements.txt
app/: synth.py
export/: build_latent_index.py  decoder.onnx  decoder.onnx.data  export.py  latent_index.npz
model/: dataset.py  train.py  vae.py
model/checkpoints/: train_log.csv
notebooks/: visualize_latent.py
packaging/: README.md  latent_synth.spec
plugin/: CMakeLists.txt  README.md
plugin/Assets/: decoder.onnx
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/dsp/: ADSREnvelope.h  BiquadFilter.h  FeedbackDelay.h  LatentLFO.h  LatentSynth.cpp  LatentSynth.h  SchroederReverb.h  Voice.h
